# ai-engineering-group

./: LICENSE  README.md
ai-powered-pricer/: Avocado-Pricer-meetup.ipynb  README.md  requirements.txt  xgb_all.joblib
fraud-detection-agentic-AI/: README.md  explainability_agent.ipynb  pyproject.toml  training_artifacts.json
fraud-detection-agentic-AI/artifacts/: encoder.joblib  feature_names.joblib  model.joblib  scaler.joblib
fraud-detection-agentic-AI/data/: inference_data_fraud.json  inference_data_not_fraud.json
fraud-detection-agentic-AI/scripts/: prompt.txt  utils.py
llm-as-a-judge/: llm-as-a-judge.ipynb  prompt.yml
llm-as-a-judge/data/: chatbot-answers-vs2.csv  groundtruth-vs2.csv
mmm-bayesian-inference/: MMM_Marketing.ipynb  README.md  bayesian_baseline_rossmann.ipynb  bayesian_utils.py  model_bayesian_baseline.pkl  requirements.txt
mmm-bayesian-inference/model_files/: metadata_bayesian_baseline.json  metadata_mmm.json  model_mmm.pkl
sql-agentic-ai/: Dockerfile  README.md  docker-compose.yml  graph.py  langgraph.json  prompt.py  pyproject.toml
